grammar.js
    stylesheet: $ => seq(
      repeat(choice(
        $._root_statement_with_sep,
        $._newline,
      )),
      optional($._root_statement),
    ),

    _root_statement_with_sep: $ => choice(
      $._root_block_statement,
      seq($._root_line_statement, $._newline),
    ),

    _block_statement_with_sep: $ => choice(
      $._block_block_statement,
      seq($._block_line_statement, $._newline),
    ),

    _root_statement: $ => choice(
      $._root_block_statement,
      $._root_line_statement,
    ),

    _block_statement: $ => choice(
      $._block_block_statement,
      $._block_line_statement,
    ),

    block: $ => seq(
      $._indent,
      repeat(choice(
        $._block_statement_with_sep,
        $._newline,
      )),
      optional($._block_statement),
      $._dedent,
    ),

    import_statement: $ => seq(
      choice('@import', 'import', '@require', 'require'),
      field('source', $.string_value),
    ),

    assignment: $ => prec.dynamic(10, prec.right(PREC.ASSIGN, seq(
      field('left', $.variable_name),
      field('operator', choice('=', '?=', ':=', '+=', '-=', '*=', '/=', '%=')),
      field('right', $.expression),
      repeat(seq(optional(','), field('right', $.expression))),
    ))),

    declaration: $ => prec.dynamic(5, prec.right(choice(
      declarationRule($, $.interpolated_property_name),
      declarationRule($, alias($.identifier, $.property_name)),
      declarationRule($, alias($.custom_property_name, $.property_name)),
      declarationRule($, alias($.nested_property_name, $.property_name), false),
    ))),

    _declaration_values: $ => declarationValues($, $._declaration_value),

    function_statement: $ => functionDefinition($),

    keyframes_statement: $ => seq(
      choice('@keyframes', 'keyframes', alias(token(/@-(webkit|moz|o|ms)-keyframes/), $.at_keyword)),
      field('name', choice(
        alias($.identifier, $.keyframes_name),
        $.interpolation,
      )),
      choice($.block, $.keyframes_block),
    ),

    at_keyword: $ => token(/@[a-zA-Z_-][\w-]*/),

    extend_statement: $ => seq(
      choice('@extend', '@extends', 'extend', 'extends'),
      field('target', $.extend_target_list),
    ),

    extend_target_list: $ => sep1($.extend_target, ','),

    extend_target: $ => seq(
      field('selector', $.nested_selector),
      optional(field('modifier', $.optional_modifier)),
    ),

    expression_statement: $ => prec.dynamic(-10, $.expression),

    rule_set: $ => ruleSet($, $.selector_list),

    selector_list: $ => sep1($.selector, $._selector_separator),
    nested_selector_list: $ => sep1($.nested_selector, $._selector_separator),

    _selector_separator: $ => choice(
      seq(',', repeat($._newline)),
      repeat1($._newline),
    ),

    selector: $ => selectorSequence($),

    nested_selector: $ => prec.dynamic(2, selectorSequence($)),

    combinator_selector: $ => prec.dynamic(20, prec(PREC.UNARY + 1, seq(
      $.combinator,
      choice(
        alias($.identifier, $.tag_name),
        $.class_name,
        $.id_name,
        $.pseudo_element,
        $.pseudo_class,
        $.attribute_selector,
        $.nesting_selector_with_suffix,
        $.nesting_selector,
        $.universal_selector,
        $.selector_interpolation,
        $.deep_combinator,
      ),
    ))),

    class_name: $ => token(seq('.', /-?[_a-zA-Z][\w-]*/)),
    combinator: $ => choice('>', '+', '~', $._selector_plus, $._selector_tilde),
    deep_combinator: $ => token(choice('/deep/', '>>>')),

    expression: $ => choice(
      $.ternary_expression,
      $.binary_expression,
      $.defined_expression,
      $.media_prefix_expression,
      $.unary_expression,
      $.not_expression,
      $.css_function_expression,
      $.call_expression,
      $.feature_query,
      $.object_value,
      $.block_literal,
      $.cast_expression,
      $.interpolation,
      $._value,
    ),

    cast_expression: $ => prec(PREC.CALL, seq(
      field('value', $.parenthesized_expression),
      field('unit', choice(
        $.unit,
        alias('%', $.unit),
      )),
    )),

    raw_css_function: $ => token(prec(3, /-?[_a-zA-Z][\w.:-]*\([^()\n]*\)/)),

    call_expression: $ => prec.dynamic(20, prec(PREC.CALL, seq(
      field('function', choice(alias($._identifier, $.function_name), alias($.dollar_identifier, $.function_name))),
      field('arguments', $.arguments),
    ))),

    parameters: $ => seq(
      token.immediate('('),
      optional(sep1($.parameter, ',')),
      ')',
    ),

    parameter: $ => prec.right(seq(
      field('name', $.variable_name),
      optional(choice(
        field('rest', '...'),
        seq('=', field('value', $.expression)),
      )),
    )),

    arguments: $ => seq(
      token.immediate('('),
      optional(seq(
        field('argument', $.expression),
        repeat(seq(optional(','), field('argument', $.expression))),
      )),
      ')',
    ),


    binary_expression: $ => choice(
      prec.right(PREC.POWER, seq(
        field('left', $.expression),
        field('operator', '**'),
        field('right', $.expression),
      )),
      prec.dynamic(10, prec.left(PREC.EQUALITY, seq(
        field('left', $.expression),
        field('operator', $.is_not_operator),
        field('right', $.expression),
      ))),
      prec.dynamic(10, prec.left(PREC.TYPE_CHECK, seq(
        field('left', $.expression),
        field('operator', $.is_a_operator),
        field('right', $.expression),
      ))),
      prec.left(PREC.RANGE, seq(
        field('left', $.expression),
        field('operator', choice('..', '...')),
        field('right', $.expression),
      )),
      ...[
        ['||', PREC.LOGICAL],
        ['&&', PREC.LOGICAL],
        ['or', PREC.LOGICAL],
        ['and', PREC.LOGICAL],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['isnt', PREC.EQUALITY],
        ['is', PREC.EQUALITY],
        ['in', PREC.IN],
        ['<', PREC.COMPARE],
        ['<=', PREC.COMPARE],
        ['>', PREC.COMPARE],
        ['>=', PREC.COMPARE],
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $.expression),
          field('operator', operator),
          field('right', $.expression),
        )),
      ),
    ),

    _value: $ => choice(
      $.number_value,
      $.boolean_value,
      $.null_value,
      $.string_value,
      $.color_value,
      $.member_expression,
      $.variable_name,
      $.property_lookup,
      $.important_modifier,
      $.parenthesized_expression,
    ),

    parenthesized_expression: $ => seq('(', repeat1($.expression), ')'),

    number_value: $ => prec.right(choice(
      seq(
        choice($.float_value, $.integer_value),
        alias(token.immediate('%'), $.unit),
      ),
      seq(
        choice($.float_value, $.integer_value),
        optional(choice(
          $.unit,
          alias($.known_unit, $.unit),
        )),
      ),
    )),

    integer_value: $ => /\d+/,
    float_value: $ => choice(/\d+\.\d+/, /\.\d+/),
    unit: $ => token.immediate(/[a-zA-Z]+/),
    variable_name: $ => choice(
      $._identifier,
      $.dollar_identifier,
    ),
    dollar_identifier: $ => /\$-?[_a-zA-Z][\w-]*/,
    string_value: $ => choice(
      seq('"', repeat(choice(
        $.escape_sequence,
        token.immediate(/[^"\\\n]+/),
      )), '"'),
      seq('\'', repeat(choice(
        $.escape_sequence,
        token.immediate(/[^'\\\n]+/),
      )), '\''),
    ),

    raw_css_value: $ => token(prec(1, /[^:(),;{}"\'\/\s][^(),;{}"\'\/\n]*/)),

    keyframes_block: $ => seq(
      '{',
      optional($._indent),
      repeat(choice(
        $._newline,
        $.keyframe_block,
      )),
      optional($._dedent),
      '}',
    ),

    keyframe_block: $ => seq(
      field('selector', $.keyframe_selector),
      repeat(seq(',', field('selector', $.keyframe_selector))),
      choice($.block, $.css_declaration_block),
    ),

    keyframe_selector: $ => choice(alias($.identifier, $.tag_name), $.number_value),

    css_declaration_block: $ => prec.dynamic(20, seq(
      '{',
      optional($._indent),
      repeat(choice(
        $._newline,
        alias($.nested_rule_set, $.rule_set),
        alias($.css_declaration, $.declaration),
      )),
      optional($._dedent),
      '}',
    )),

    _identifier: $ => choice($.identifier, alias($.nested_property_name, $.identifier)),

    identifier: $ => /-?[_a-zA-Z][\w-]*/,

    comment: $ => token(choice(
      seq('//', /.*/),
      seq(
        '/*',
        /[^*]*\*+([^/*][^*]*\*+)*/,
        '/',
      ),
    )),
  },
});

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

function queriedBlock($, keyword) {
  return seq(
    keyword,
    field('query', choice($.expression, $.media_query)),
    $.block,
  );
}

function functionDefinition($) {
  return prec.dynamic(30, prec(PREC.CALL + 1, seq(
    field('name', alias($._identifier, $.function_name)),
    field('parameters', $.parameters),
    $.block,
  )));
}

function ruleSet($, selector) {
  return prec.dynamic(10, prec(3, seq(
    field('selector', selector),
    choice($.css_declaration_block, $.block),
  )));
}

function selectorSequence($) {
  return prec.right(repeat1(choice(
    alias($.identifier, $.tag_name),
    $.class_name,
    $.id_name,
    alias($.dollar_identifier, $.placeholder_selector),
    $.pseudo_element,
    $.pseudo_class,
    $.attribute_selector,
    $.nesting_selector_with_suffix,
    $.deep_combinator,
    $.combinator_selector,
    $.nesting_selector,
    $.universal_selector,
    $.selector_interpolation,
  )));
}

function declarationRule($, property, optionalColon = true) {
  const parts = [field('property', property)];
  if (optionalColon) {
    parts.push(optional(choice(':', alias($._declaration_colon, ':'))));
  }
  parts.push($._declaration_values);
  return seq(...parts);
}

function declarationProperty($) {
  return choice(
    $.interpolated_property_name,
    alias($.identifier, $.property_name),
    alias($.custom_property_name, $.property_name),
    alias($.nested_property_name, $.property_name),
  );
}

function declarationValues($, value) {
  return prec.right(seq(
    field('value', value),
    repeat(choice(
      field('value', value),
      seq(',', repeat($._newline), field('value', value)),
    )),
  ));
}
